--- a/PMS-PropertyHapa.Staff/Views/Assests/AddAssest.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Assests/AddAssest.cshtml
@@ -225,7 +225,7 @@
                     <div class="card-header pb-0">
                     </div>
                     <div class="card-body">
-                        <form class="f1" method="post" id="multiStepForm">
+                        <form class="f1" method="post" id="multiStepForm" enctype="multipart/form-data">
                             <div class="f1-steps" style="display: flex; justify-content: space-between;">
                                 <div class="f1-progress" style="position: absolute; width: 100%; bottom: 0;">
                                     <div class="f1-progress-line" id="progressLine"></div>
@@ -323,14 +323,14 @@
                                     <div class="col-md-4 mb-2">
                                         <div class="form-group">
                                             <label for="assetPicture">Upload Picture</label>
-                                            <input type="file" class="form-control" id="assetPicture" name="pictureFile">
+                                            <input type="file" class="form-control" id="assetPicture" name="assetPicture">
                                         </div>
                                     </div>
                                     <div class="col-md-4 mb-2">
                                         <div id="picturePreviewContainer" class="rounded">
                                             @if (Model?.Asset?.Image != null)
                                             {
-                                                <img src="@Model.Asset.Image" alt="Asset Picture" class="img-fluid">
+                                                <img src="@Model.Asset.Image" id="PictureString" name="PictureString" alt="Asset Picture" class="img-fluid">
                                             }
                                             else
                                             {
@@ -1035,8 +1035,8 @@
             State: $('#state').val(),
             Country: $('#country').val(),
             Zipcode: $('#zipcode').val(),
-            PictureFile: $('#picturePreviewContainer').val(),
             Units: units,
+            Image: $('#Image').val(), 
             SelectedBankAccountOption: $('#SelectedBankAccountOption').val(),
             SelectedReserveFundsOption: $('#SelectedReserveFundsOption').val(),
             SelectedOwnershipOption: $('#SelectedOwnershipOption').val(),
@@ -1047,6 +1047,7 @@
             OwnerZipcode: $('#OwnerZipcode').val(),
             OwnerCity: $('#OwnerCity').val(),
             OwnerCountry: $('#OwnerCountry').val()
+            
         };
 
 
@@ -1061,6 +1062,7 @@
         debugger;
 
         var formData = collectFormData();
+
         var submitUrl = isEditMode ? `$/Assests/UpdateAsset/{Model?.Asset?.AssetId}` : '/Assests/AddAsset';
         console.log(formData);
 
@@ -1208,14 +1210,21 @@
             }
         });
 
-        $("#assetPicture").change(function () {
-            if (this.files && this.files[0]) {
-                var reader = new FileReader();
-                reader.onload = function (e) {
-                    $('#picturePreviewContainer').html(`<img src="${e.target.result}" alt="Asset Picture" class="img-fluid">`);
-                };
-                reader.readAsDataURL(this.files[0]);
-            }
-        });
+     $("#assetPicture").change(function () {
+    if (this.files && this.files[0]) {
+        var reader = new FileReader();
+
+        reader.onload = function (e) {
+            // Display the image preview
+            $('#picturePreviewContainer').html(`<img src="${e.target.result}" alt="Asset Picture" class="img-fluid">`);
+
+            // Set the base64 string to hidden input
+            $('#Image').val(e.target.result);
+        };
+
+        reader.readAsDataURL(this.files[0]);
+    }
+});
+
     });
 </script>
